--- a/index.html
+++ b/index.html
@@ -1,1 +1,294 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Ezra Lu · LLM-Focused Engineer</title>
+  <meta name="description" content="Ezra Lu – AI engineer focused on LLM agent systems, statistical modeling, and high-performance compute.">
+  <style>
+    :root {
+      color-scheme: light dark;
+      --bg: #0f172a;
+      --bg-alt: rgba(15, 23, 42, 0.85);
+      --text: #e2e8f0;
+      --muted: #94a3b8;
+      --accent: #38bdf8;
+      --accent-strong: #0ea5e9;
+      --card-bg: rgba(15, 23, 42, 0.65);
+      --card-border: rgba(148, 163, 184, 0.25);
+      font-family: "Inter", "Segoe UI", system-ui, -apple-system, sans-serif;
+    }
+
+    body {
+      margin: 0;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      background: radial-gradient(circle at top left, rgba(56, 189, 248, 0.15), transparent 40%),
+                  radial-gradient(circle at 20% 80%, rgba(14, 165, 233, 0.12), transparent 55%),
+                  var(--bg);
+      color: var(--text);
+    }
+
+    a {
+      color: var(--accent);
+    }
+
+    main {
+      flex: 1;
+      width: min(960px, calc(100% - 3rem));
+      margin: 0 auto;
+      padding: 3rem 0 4rem;
+    }
+
+    header.hero {
+      padding: 3.5rem clamp(1.5rem, 5vw, 3rem);
+      background: var(--card-bg);
+      border: 1px solid var(--card-border);
+      border-radius: 24px;
+      backdrop-filter: blur(12px);
+      box-shadow: 0 25px 80px rgba(15, 23, 42, 0.45);
+    }
+
+    .hero h1 {
+      font-size: clamp(2.25rem, 5vw, 3.25rem);
+      margin: 0;
+      letter-spacing: -0.03em;
+    }
+
+    .hero p {
+      margin: 1rem 0 0;
+      color: var(--muted);
+      font-size: 1.05rem;
+      line-height: 1.7;
+      max-width: 52ch;
+    }
+
+    .cta {
+      margin-top: 2rem;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
+
+    .btn {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0.85rem 1.6rem;
+      border-radius: 999px;
+      font-weight: 600;
+      text-decoration: none;
+      transition: transform 0.2s ease, box-shadow 0.2s ease, background 0.2s ease;
+      border: 1px solid transparent;
+    }
+
+    .btn.primary {
+      background: linear-gradient(135deg, var(--accent), var(--accent-strong));
+      color: #0b1120;
+      box-shadow: 0 12px 30px rgba(56, 189, 248, 0.35);
+    }
+
+    .btn.secondary {
+      border-color: rgba(148, 163, 184, 0.35);
+      background: rgba(15, 23, 42, 0.45);
+      color: var(--text);
+    }
+
+    .btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 16px 40px rgba(56, 189, 248, 0.35);
+    }
+
+    section {
+      margin-top: 3.5rem;
+      padding: clamp(1.75rem, 4vw, 2.5rem);
+      background: var(--card-bg);
+      border: 1px solid var(--card-border);
+      border-radius: 20px;
+      backdrop-filter: blur(12px);
+      box-shadow: 0 18px 60px rgba(15, 23, 42, 0.35);
+    }
+
+    section h2 {
+      margin: 0;
+      font-size: clamp(1.5rem, 3vw, 2rem);
+      letter-spacing: -0.02em;
+    }
+
+    section p.lead {
+      color: var(--muted);
+      margin-top: 0.75rem;
+      max-width: 70ch;
+      line-height: 1.6;
+    }
+
+    #notes-list {
+      list-style: none;
+      padding: 0;
+      margin: 1.5rem 0 0;
+      display: grid;
+      gap: 0.85rem;
+    }
+
+    #notes-list li {
+      padding: 0.85rem 1rem;
+      border-radius: 14px;
+      background: rgba(15, 23, 42, 0.6);
+      border: 1px solid rgba(148, 163, 184, 0.2);
+      transition: border 0.2s ease, transform 0.2s ease;
+    }
+
+    #notes-list li:hover {
+      border-color: rgba(56, 189, 248, 0.6);
+      transform: translateX(4px);
+    }
+
+    #notes-list a {
+      color: inherit;
+      text-decoration: none;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 0.75rem;
+    }
+
+    .note-meta {
+      color: var(--muted);
+      font-size: 0.85rem;
+    }
+
+    footer {
+      padding: 2rem 0 3rem;
+      color: var(--muted);
+      text-align: center;
+      font-size: 0.85rem;
+    }
+
+    @media (max-width: 640px) {
+      main {
+        width: calc(100% - 2.5rem);
+        padding-top: 2.5rem;
+      }
+
+      header.hero {
+        padding: 2.5rem 1.75rem;
+      }
+
+      .cta {
+        flex-direction: column;
+        align-items: stretch;
+      }
+    }
+  </style>
+</head>
+<body>
+  <main>
+    <header class="hero">
+      <h1>Job-hunting for LLM-heavy engineering roles.</h1>
+      <p>
+        I design and ship production-ready language model systems—melding statistical rigor with the speed of modern agent tooling.
+        From NLME solvers to document parsing pipelines, I focus on measurable impact and thoughtful evaluation loops.
+      </p>
+      <div class="cta">
+        <a class="btn primary" href="resume/resume_en.pdf" target="_blank" rel="noopener">English Résumé</a>
+        <a class="btn secondary" href="resume/resume_cn.pdf" target="_blank" rel="noopener">中文简历</a>
+        <a class="btn secondary" href="#notes">Latest Notes</a>
+      </div>
+    </header>
+
+    <section id="notes">
+      <h2>Field Notes</h2>
+      <p class="lead">Quick drops from ongoing LLM experiments, recruiting takeaways, and infra learnings. Add any <code>.md</code> file to <code>/notes</code> and it will appear below.</p>
+      <ul id="notes-list">
+        <li id="notes-loading">Loading notes…</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    Built with vanilla HTML/CSS + a sprinkle of JS. PDFs are generated from \LaTeX{} via GitHub Actions, so they stay in sync with the TeX sources.
+  </footer>
+
+  <script>
+    const notesListEl = document.getElementById('notes-list');
+    const loadingEl = document.getElementById('notes-loading');
+
+    const REPO_OWNER = 'ezraluuu';
+    const REPO_NAME = 'ezraluuu.github.io';
+    const NOTES_DIR = 'notes';
+
+    function formatTitle(filename) {
+      const base = filename.replace(/\.md$/i, '');
+      const parts = base.split(/[-_]/).filter(Boolean);
+      if (parts.length <= 1) {
+        return base.replace(/-/g, ' ');
+      }
+      const datePart = parts.slice(0, 3).join('-');
+      const titlePart = parts.slice(3).join(' ');
+      return `${titlePart ? titlePart.replace(/\b\w/g, ch => ch.toUpperCase()) : base} (${datePart})`;
+    }
+
+    function formatDateFromName(filename) {
+      const match = filename.match(/^(\d{4})[-_]?(\d{2})[-_]?(\d{2})/);
+      if (!match) return '';
+      const [, y, m, d] = match;
+      return `${y}-${m}-${d}`;
+    }
+
+    function renderNotes(files) {
+      notesListEl.innerHTML = '';
+      if (!files.length) {
+        const emptyItem = document.createElement('li');
+        emptyItem.textContent = 'Drop markdown files into the notes/ folder to see them here.';
+        notesListEl.appendChild(emptyItem);
+        return;
+      }
+      files.forEach(file => {
+        const item = document.createElement('li');
+        const link = document.createElement('a');
+        link.href = `${NOTES_DIR}/${file.name}`;
+        link.target = '_blank';
+        link.rel = 'noopener';
+        link.textContent = formatTitle(file.name);
+
+        const meta = document.createElement('span');
+        meta.className = 'note-meta';
+        const dated = formatDateFromName(file.name);
+        meta.textContent = dated;
+
+        if (dated) {
+          link.appendChild(meta);
+        }
+
+        item.appendChild(link);
+        notesListEl.appendChild(item);
+      });
+    }
+
+    async function fetchNotes() {
+      try {
+        const response = await fetch(`https://api.github.com/repos/${REPO_OWNER}/${REPO_NAME}/contents/${NOTES_DIR}`);
+        if (!response.ok) {
+          throw new Error(`GitHub API responded with ${response.status}`);
+        }
+        const data = await response.json();
+        const markdownFiles = data.filter(entry => entry.type === 'file' && entry.name.endsWith('.md'));
+        markdownFiles.sort((a, b) => (a.name < b.name ? 1 : -1));
+        renderNotes(markdownFiles);
+      } catch (error) {
+        console.error('Failed to load notes', error);
+        if (loadingEl) {
+          loadingEl.remove();
+        }
+        notesListEl.innerHTML = '';
+        const fallback = document.createElement('li');
+        fallback.textContent = 'Unable to reach GitHub right now. Notes live in /notes on the repo.';
+        notesListEl.appendChild(fallback);
+      }
+    }
+
+    fetchNotes();
+  </script>
+</body>
+</html>
