同步更新首页描述，添加描述同步脚本，并忽略.pyc文件

--- a/index-zh.html
+++ b/index-zh.html
@@ -226,8 +226,7 @@
     <header class="hero">
       <h1>专注打造可落地的 LLM 系统。</h1>
       <p>
-        我构建并上线语言模型系统——融合统计建模的严谨方法与现代智能体工具链的迭代速度。
-        无论是 NLME 求解器还是文档解析流水线，我关注的是可衡量的业务价值与周全的评估闭环。
+        具备统计建模与系统优化双重背景，专注 AI 算法实现与大模型工程应用。 熟悉非线性模型、Agent 框架、文档解析等场景，擅长用 C++/Python 构建高性能系统并推动实际落地。
       </p>
       <div class="cta">
         <a class="btn primary" href="resume/resume_cn.pdf" target="_blank" rel="noopener">中文简历</a>
