--- a/index.html
+++ b/index.html
@@ -226,8 +226,7 @@
     <header class="hero">
       <h1>Engineering production-ready LLM systems.</h1>
       <p>
-        I design and ship production-ready language model systems—melding statistical rigor with the speed of modern agent tooling.
-        From NLME solvers to document parsing pipelines, I focus on measurable impact and thoughtful evaluation loops.
+        Applied AI engineer focused on statistical modeling, large-model deployment, and high-performance systems. Experienced in nonlinear models, agent frameworks, and document parsing with C++/Python implementations.
       </p>
       <div class="cta">
         <a class="btn primary" href="resume/resume_en.pdf" target="_blank" rel="noopener">English Résumé</a>
